--- a/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
+++ b/src/app/hospital-bi-dashboard/hospital-bi-dashboard.component.css
@@ -58,8 +58,8 @@ mat-list{
 table th{
     font-weight: bold;
 }
-#tableRow{
+/* #tableRow{
     width: 100%;
     display: table;
     position: fixed;
-}
+} */
