--- a/src/app/hospital-bi-dashboard/pie-chart/pie-chart.component.html
+++ b/src/app/hospital-bi-dashboard/pie-chart/pie-chart.component.html
@@ -1,3 +1,3 @@
 <mat-spinner *ngIf="loader"></mat-spinner>
-<google-chart #chart *ngIf="!loader" [type]="type" [data]="data" [options]="options" [width]="width" [height]="height" (select)="onSelect($event)">
+<google-chart #chart *ngIf="!loader" [type]="type" [data]="data" [options]="options" [width]="width" [height]="height">
 </google-chart>
