--- a/src/app/maternitypatients/maternitypatients.component.html
+++ b/src/app/maternitypatients/maternitypatients.component.html
@@ -397,6 +397,7 @@
         <th>מס מטופל</th>
         <th>שם פרטי</th>
         <th>שם משפחה</th>
+        <th>כתובת</th>
         <th>מספר טלפון</th>
         <th>תאריך לידה משוער</th>
         <th>שבוע היריון</th>
@@ -407,6 +408,7 @@
         <td> {{mat.PatientNumber}} </td>
         <td> {{mat.PatientFirstName}} </td>
         <td> {{mat.PatientLastName}} </td>
+        <td> {{mat.PatientAddress}} </td>
         <td> {{mat.PatientMobile}} </td>
         <td> {{mat.PatientPregnancyDOB}} </td>
         <td> {{mat.PatientPregnancyWeekAtInsert}} </td>
