--- a/src/app/maternity/maternity.component.html
+++ b/src/app/maternity/maternity.component.html
@@ -269,7 +269,7 @@
                         <td>
                             <div class="example-button-container">
                                 <button class="row-data" mat-mini-fab color="primary"
-                                    (click)="editRow(maternityModal,'subProjEdit',subProj);">
+                                    (click)="editRow(maternityModal,'subProjEdit',subProj); getParentProjects();">
                                     <mat-icon>create</mat-icon>
                                 </button>
                             </div>
