sms to surgery main control 29112022

--- a/src/app/surgery-control-main/surgery-control-main.component.css
+++ b/src/app/surgery-control-main/surgery-control-main.component.css
@@ -5,6 +5,9 @@
 table .diff-col{
     padding: 0 !important;
 }
+.hasNotes{
+    background: #c9c9c9;
+}
 .mat-tooltip{
     max-width: unset !important;
 }
