--- a/src/app/surgery-control-main/surgery-control-main.component.html
+++ b/src/app/surgery-control-main/surgery-control-main.component.html
@@ -378,6 +378,25 @@
                                             <mat-icon>note_add</mat-icon>
                                         </button>
                                     </td></ng-container
+                                ><ng-container matColumnDef="NotesHistory"
+                                    ><th
+                                        class="diff-col"
+                                        mat-header-cell
+                                        *matHeaderCellDef
+                                    ></th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button
+                                            title="הסטורית הערות"
+                                            type="button"
+                                            (click)="
+                                                openNotesHistoryDialog(element)
+                                            "
+                                            mat-mini-fab
+                                            color="accent"
+                                        >
+                                            <mat-icon>notes</mat-icon>
+                                        </button>
+                                    </td></ng-container
                                 >
                                 <tr
                                     mat-header-row
@@ -387,6 +406,7 @@
                                     "
                                 ></tr>
                                 <tr
+                                    [ngClass]="{ hasNotes: row.TotalNotes > 0 }"
                                     mat-row
                                     *matRowDef="
                                         let row;
@@ -739,6 +759,26 @@
                                         </button>
                                     </td></ng-container
                                 >
+                                <ng-container matColumnDef="NotesHistory"
+                                    ><th
+                                        class="diff-col"
+                                        mat-header-cell
+                                        *matHeaderCellDef
+                                    ></th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button
+                                            title="הסטורית הערות"
+                                            type="button"
+                                            (click)="
+                                                openNotesHistoryDialog(element)
+                                            "
+                                            mat-mini-fab
+                                            color="accent"
+                                        >
+                                            <mat-icon>notes</mat-icon>
+                                        </button>
+                                    </td></ng-container
+                                >
                                 <tr
                                     mat-header-row
                                     *matHeaderRowDef="
@@ -747,6 +787,7 @@
                                     "
                                 ></tr>
                                 <tr
+                                    [ngClass]="{ hasNotes: row.TotalNotes > 0 }"
                                     mat-row
                                     *matRowDef="
                                         let row;
@@ -764,9 +805,7 @@
                 <div class="row">
                     <div class="col">
                         <span *ngFor="let room of SurgeryRoomsNumber">
-                            <mat-checkbox
-                                (change)="filterDataByRoom($event)"
-                            >
+                            <mat-checkbox (change)="filterDataByRoom($event)">
                                 {{ room.RoomNumber }} </mat-checkbox
                             >&nbsp;&nbsp;&nbsp;
                         </span>
@@ -1111,6 +1150,25 @@
                                             <mat-icon>note_add</mat-icon>
                                         </button>
                                     </td></ng-container
+                                ><ng-container matColumnDef="NotesHistory"
+                                    ><th
+                                        class="diff-col"
+                                        mat-header-cell
+                                        *matHeaderCellDef
+                                    ></th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button
+                                            title="הסטורית הערות"
+                                            type="button"
+                                            (click)="
+                                                openNotesHistoryDialog(element)
+                                            "
+                                            mat-mini-fab
+                                            color="accent"
+                                        >
+                                            <mat-icon>notes</mat-icon>
+                                        </button>
+                                    </td></ng-container
                                 >
                                 <tr
                                     mat-header-row
@@ -1120,6 +1178,8 @@
                                     "
                                 ></tr>
                                 <tr
+                                
+                                [ngClass]="{ hasNotes: row.TotalNotes > 0 }"
                                     mat-row
                                     *matRowDef="
                                         let row;
