--- a/src/app/hospital-bi-dashboard/graphs-modal/graphs-modal.component.html
+++ b/src/app/hospital-bi-dashboard/graphs-modal/graphs-modal.component.html
@@ -27,7 +27,7 @@
             <div class="row" style="justify-content: center;text-align-last: center;">
                 <h3>ימי אובדן</h3>
             </div>
-            <google-chart #chart2 [type]="type" [data]="data2" [options]="options2"
+            <google-chart #chart2 [type]="type" [data]="data2" [options]="options"
                 [columns]="columnNames2" [width]="width" [height]="height">
             </google-chart>
         </div>
@@ -47,7 +47,7 @@
             <div class="row" style="justify-content: center;text-align-last: center;">
                 <h3>ימי גלישה</h3>
             </div>
-            <google-chart #chart2 [type]="type" [data]="data4" [options]="options2"
+            <google-chart #chart2 [type]="type" [data]="data4" [options]="options"
                 [columns]="columnNames4" [width]="width" [height]="height">
             </google-chart>
         </div>
