--- a/src/app/ip-points/ip-points.component.html
+++ b/src/app/ip-points/ip-points.component.html
@@ -1,15 +1,15 @@
 <div id="page-toshow">
-    <h1 class="page-title text-center">ניהול שרתים</h1>
+    <h1 class="page-title text-center">נקודות תקשורת</h1>
 
     <div class="container-fluid pb-60">
         <div class="row">
-            <div  class="col">
+            <div dir="rtl" class="col">
                 <mat-form-field>
-                    <mat-label>Search</mat-label>
+                    <mat-label>חפש</mat-label>
                     <input
                         matInput
                         (keyup)="applyFilter($event)"
-                        placeholder="Search"
+                        placeholder="חפש"
                         #input
                     />
                 </mat-form-field>
@@ -21,91 +21,75 @@
                         <table
                             class="table"
                             mat-table
-                            class="text-left w-100"
                             [dataSource]="dataSource"
                             matSort
                         >
                             <ng-container matColumnDef="RowID">
                                 <th mat-header-cell *matHeaderCellDef>מס'</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.RowID }}
+                                    {{ element.RowId }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerName">
+                            <ng-container matColumnDef="CenterName">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    Server Name
+                                    מוקד
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerName }}
+                                    {{ element.CenterName }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerType">
-                                <th mat-header-cell *matHeaderCellDef>Type</th>
+                            <ng-container matColumnDef="IPLocation">
+                                <th mat-header-cell *matHeaderCellDef>מיקום</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerType }}
+                                    {{ element.IPLocation }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="HardWare">
+                            <ng-container matColumnDef="PointNumber">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    HardWare
+                                    מס' נקודה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.HardWare }}
+                                    {{ element.PointNumber }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="VSerialNumber">
+                            <ng-container matColumnDef="Screen">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    V Serial Number
+                                    מסך
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.VSerialNumber }}
+                                    {{ element.Screen }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerRemarks">
+                            <ng-container matColumnDef="IP">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    Remarks
+                                    IP
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerRemarks }}
+                                    {{ element.IP }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerLocation">
+                            <ng-container matColumnDef="GetWay">
                                 <th mat-header-cell *matHeaderCellDef>
-                                    Location
+                                    GetWay
                                 </th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerLocation }}
+                                    {{ element.GetWay }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerOS">
-                                <th mat-header-cell *matHeaderCellDef>OS</th>
+                            <ng-container matColumnDef="SubNet">
+                                <th mat-header-cell *matHeaderCellDef>SubNet</th>
                                 <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerOS }}
+                                    {{ element.SubNet }}
                                 </td>
                             </ng-container>
-                            <ng-container matColumnDef="ServerFunctions">
-                                <th mat-header-cell *matHeaderCellDef>
-                                    Functions
-                                </th>
-                                <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerFunctions }}
-                                </td>
-                            </ng-container>
-                            <ng-container matColumnDef="ServerIPAddress">
-                                <th mat-header-cell *matHeaderCellDef>
-                                    IP Address
-                                </th>
-                                <td mat-cell *matCellDef="let element">
-                                    {{ element.ServerIPAddress }}
-                                </td>
-                            </ng-container>
-                            <ng-container matColumnDef="editServer">
+                            
+                            <ng-container matColumnDef="editIPPoint">
                                 <th
                                     mat-header-cell
                                     *matHeaderCellDef
                                     width="50"
                                 >
-                                    Edit
+                                    עריכה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
