--- a/src/app/servers-for-onnline/servers-for-onnline.component.css
+++ b/src/app/servers-for-onnline/servers-for-onnline.component.css
@@ -8,3 +8,16 @@
     left: 85px;
     bottom: 55px;
 }
+.mat-form-field {
+    display: inline-block;
+    position: relative;
+    text-align: left;
+    width: 100%;
+}
+.w-100{
+    width: 100%;
+}
+
+td.mat-cell, td.mat-footer-cell, th.mat-header-cell {
+    text-align: left;
+}
